Core: Update tables

--- a/core/.env
+++ b/core/.env
@@ -1,1 +1,1 @@
-POSTGRES_DSN="postgresql+psycopg2://postgres:simple@localhost:5433/game_profile"
+POSTGRES_DSN="postgresql+psycopg2://postgres:simple@localhost:5454/game_profile__postgres"
